adding more description to w and top tagger

--- a/2017_jmar.html
+++ b/2017_jmar.html
@@ -321,7 +321,8 @@ Wtagging/2017_Wtagging.json PUJetID/2017_PUJetID.json
 <span class="r5">│   </span>│ <span class="r4">No description</span> │                                                                              
 <span class="r5">│   </span>╰────────────────╯                                                                              
 <span class="r5">├── </span>📈 <span class="r3">Wtagging_2017HP43DDT</span> (v1)                                                                    
-<span class="r5">│   </span>Scale factor for W tagging                                                                      
+<span class="r5">│   </span>Scale factor for W tagging for (decorrelated tau21 = tau21DDT) (2017HP43DDT): year=2017, HP,    
+<span class="r5">│   </span>tau21DDT&lt;0.43, PUPPI                                                                            
 <span class="r5">│   </span>Node counts: <span class="r3">Category</span>: 4, <span class="r3">Binning</span>: 6                                                            
 <span class="r5">│   </span>╭───────── ▶ input ──────────╮ ╭──────────────────────── ▶ input ────────────────────────╮      
 <span class="r5">│   </span>│ <span class="r3">eta</span> (real)                 │ │ <span class="r3">pt</span> (real)                                               │      
@@ -338,7 +339,7 @@ Wtagging/2017_Wtagging.json PUJetID/2017_PUJetID.json
 <span class="r5">│   </span>│ <span class="r4">No description</span> │                                                                              
 <span class="r5">│   </span>╰────────────────╯                                                                              
 <span class="r5">├── </span>📈 <span class="r3">Wtagging_2017HP45</span> (v1)                                                                       
-<span class="r5">│   </span>Scale factor for W tagging                                                                      
+<span class="r5">│   </span>Scale factor for W tagging for  (2017HP45): year=2017, HP, tau21&lt;0.45, PUPPI                    
 <span class="r5">│   </span>Node counts: <span class="r3">Category</span>: 4, <span class="r3">Binning</span>: 6                                                            
 <span class="r5">│   </span>╭───────── ▶ input ──────────╮ ╭──────────────────────── ▶ input ────────────────────────╮      
 <span class="r5">│   </span>│ <span class="r3">eta</span> (real)                 │ │ <span class="r3">pt</span> (real)                                               │      
@@ -355,7 +356,8 @@ Wtagging/2017_Wtagging.json PUJetID/2017_PUJetID.json
 <span class="r5">│   </span>│ <span class="r4">No description</span> │                                                                              
 <span class="r5">│   </span>╰────────────────╯                                                                              
 <span class="r5">├── </span>📈 <span class="r3">Wtagging_2017JMR43DDT</span> (v1)                                                                   
-<span class="r5">│   </span>Scale factor for W tagging                                                                      
+<span class="r5">│   </span>Jet mass resolution SF for 2017 for wp 2017JMR43DDT: (decorrelated tau21 = tau21DDT)            
+<span class="r5">│   </span>tau21DDT&lt;0.43 PUPPI                                                                             
 <span class="r5">│   </span>Node counts: <span class="r3">Category</span>: 4, <span class="r3">Binning</span>: 6                                                            
 <span class="r5">│   </span>╭───────── ▶ input ──────────╮ ╭──────────────────────── ▶ input ────────────────────────╮      
 <span class="r5">│   </span>│ <span class="r3">eta</span> (real)                 │ │ <span class="r3">pt</span> (real)                                               │      
@@ -372,7 +374,7 @@ Wtagging/2017_Wtagging.json PUJetID/2017_PUJetID.json
 <span class="r5">│   </span>│ <span class="r4">No description</span> │                                                                              
 <span class="r5">│   </span>╰────────────────╯                                                                              
 <span class="r5">├── </span>📈 <span class="r3">Wtagging_2017JMR45</span> (v1)                                                                      
-<span class="r5">│   </span>Scale factor for W tagging                                                                      
+<span class="r5">│   </span>Jet mass resolution SF for 2017 for wp 2017JMR45:  tau21&lt;0.45 PUPPI                             
 <span class="r5">│   </span>Node counts: <span class="r3">Category</span>: 4, <span class="r3">Binning</span>: 6                                                            
 <span class="r5">│   </span>╭───────── ▶ input ──────────╮ ╭──────────────────────── ▶ input ────────────────────────╮      
 <span class="r5">│   </span>│ <span class="r3">eta</span> (real)                 │ │ <span class="r3">pt</span> (real)                                               │      
@@ -389,7 +391,8 @@ Wtagging/2017_Wtagging.json PUJetID/2017_PUJetID.json
 <span class="r5">│   </span>│ <span class="r4">No description</span> │                                                                              
 <span class="r5">│   </span>╰────────────────╯                                                                              
 <span class="r5">├── </span>📈 <span class="r3">Wtagging_2017JMS43DDT</span> (v1)                                                                   
-<span class="r5">│   </span>Scale factor for W tagging                                                                      
+<span class="r5">│   </span>Jet mass scale SF for 2017 for wp 2017JMS43DDT: (decorrelated tau21 = tau21DDT) tau21DDT&lt;0.43   
+<span class="r5">│   </span>PUPPI                                                                                           
 <span class="r5">│   </span>Node counts: <span class="r3">Category</span>: 4, <span class="r3">Binning</span>: 6                                                            
 <span class="r5">│   </span>╭───────── ▶ input ──────────╮ ╭──────────────────────── ▶ input ────────────────────────╮      
 <span class="r5">│   </span>│ <span class="r3">eta</span> (real)                 │ │ <span class="r3">pt</span> (real)                                               │      
@@ -406,7 +409,7 @@ Wtagging/2017_Wtagging.json PUJetID/2017_PUJetID.json
 <span class="r5">│   </span>│ <span class="r4">No description</span> │                                                                              
 <span class="r5">│   </span>╰────────────────╯                                                                              
 <span class="r5">├── </span>📈 <span class="r3">Wtagging_2017JMS45</span> (v1)                                                                      
-<span class="r5">│   </span>Scale factor for W tagging                                                                      
+<span class="r5">│   </span>Jet mass scale SF for 2017 for wp 2017JMS45:  tau21&lt;0.45 PUPPI                                  
 <span class="r5">│   </span>Node counts: <span class="r3">Category</span>: 4, <span class="r3">Binning</span>: 6                                                            
 <span class="r5">│   </span>╭───────── ▶ input ──────────╮ ╭──────────────────────── ▶ input ────────────────────────╮      
 <span class="r5">│   </span>│ <span class="r3">eta</span> (real)                 │ │ <span class="r3">pt</span> (real)                                               │      
@@ -423,7 +426,8 @@ Wtagging/2017_Wtagging.json PUJetID/2017_PUJetID.json
 <span class="r5">│   </span>│ <span class="r4">No description</span> │                                                                              
 <span class="r5">│   </span>╰────────────────╯                                                                              
 <span class="r5">├── </span>📈 <span class="r3">Wtagging_2017LP43DDT</span> (v1)                                                                    
-<span class="r5">│   </span>Scale factor for W tagging                                                                      
+<span class="r5">│   </span>Scale factor for W tagging for (decorrelated tau21 = tau21DDT) (2017LP43DDT): year=2017, LP,    
+<span class="r5">│   </span>tau21DDT&gt;0.43, PUPPI                                                                            
 <span class="r5">│   </span>Node counts: <span class="r3">Category</span>: 4, <span class="r3">Binning</span>: 6                                                            
 <span class="r5">│   </span>╭───────── ▶ input ──────────╮ ╭──────────────────────── ▶ input ────────────────────────╮      
 <span class="r5">│   </span>│ <span class="r3">eta</span> (real)                 │ │ <span class="r3">pt</span> (real)                                               │      
@@ -440,7 +444,7 @@ Wtagging/2017_Wtagging.json PUJetID/2017_PUJetID.json
 <span class="r5">│   </span>│ <span class="r4">No description</span> │                                                                              
 <span class="r5">│   </span>╰────────────────╯                                                                              
 <span class="r5">├── </span>📈 <span class="r3">Wtagging_2017LP45</span> (v1)                                                                       
-<span class="r5">│   </span>Scale factor for W tagging                                                                      
+<span class="r5">│   </span>Scale factor for W tagging for  (2017LP45): year=2017, LP, tau21&gt;0.45, PUPPI                    
 <span class="r5">│   </span>Node counts: <span class="r3">Category</span>: 4, <span class="r3">Binning</span>: 6                                                            
 <span class="r5">│   </span>╭───────── ▶ input ──────────╮ ╭──────────────────────── ▶ input ────────────────────────╮      
 <span class="r5">│   </span>│ <span class="r3">eta</span> (real)                 │ │ <span class="r3">pt</span> (real)                                               │      
